--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,31 +7,27 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to AWS ECS
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          region: ${{ secrets.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Build, tag, and push Docker image
-        run: |
-          docker build -t my-medusa-backend .
-          docker tag my-medusa-backend:latest 211125328135.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-medusa-backend:latest
-          docker push 211125328135.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-medusa-backend:latest
+    - name: Log in to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Deploy to ECS
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ecs-task-definition.json
-          service: my-medusa-service
-          cluster: my-medusa-cluster
-          wait-for-service-stability: true
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-medusa-backend:latest .
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-medusa-backend:latest
+
+    - name: Deploy to ECS
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ecs-task-definition.json
+        service: my-ecs-service
+        cluster: my-ecs-cluster
+        wait-for-service-stability: true
