--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Log in to Amazon ECR
       uses: aws-actions/amazon-ecr-login@v1
       with:
-        region: ap-south-1
+        region: ${{ secrets.AWS_REGION }}
 
     - name: Build and push Docker image
       run: |
