--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,9 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v1
+      uses: aws-actions/amazon-ecr-login@v2
       with:
+        registry-type: 'ecr'
         region: ${{ secrets.AWS_REGION }}
 
     - name: Build and push Docker image
